# ResistenceSupportZone

./: .gitignore  analyzer.py  config.py  confirmations.py  db_storage.py  main.py  models.py  multi_symbol_manager.py  pyproject.toml  save_config.py  signal_generator.py  symbol_analyzer.py  ta_logic.py  trade_imitation.py  ws_client.py
save_old_files/: analyzer.py  config.py  detectors.py  logger.py  main.py  models.py  multi_symbol_manager.py  save_config.py  signals.py  symbol_analyzer.py  ws_client.py
