[project]
name = "resistence-support-zone"
version = "2.0.0"
description = "Advanced support/resistance zone analyzer"
authors = [{name = "Trader Team"}]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "black>=26.1.0",
    "loguru>=0.7.3",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pybit>=5.13.0",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "websockets>=16.0",
]

